--- a/notebooks/mock_spectra.ipynb
+++ b/notebooks/mock_spectra.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "da562ee8",
    "metadata": {},
    "outputs": [],
@@ -182,6 +182,27 @@
     "\n",
     "data_dir= '/home/qezlou/HD2/HETDEX/encoder/data/'\n",
     "mock_spec = gen_training_data.MockSpectra(size=10, data_dir=data_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bdb9095f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1036,)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mock_spec.wave.shape"
    ]
   },
   {
