--- a/notebooks/mock_spectra.ipynb
+++ b/notebooks/mock_spectra.ipynb
@@ -171,22 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "da562ee8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import importlib\n",
-    "from hetgen import gen_training_data\n",
-    "importlib.reload(gen_training_data)\n",
+    "from os import path as op\n",
+    "from  hetgen import data\n",
+    "importlib.reload(data)\n",
     "\n",
+    "# Generate and save training data\n",
     "data_dir= '/home/qezlou/HD2/HETDEX/encoder/data/'\n",
-    "mock_spec = gen_training_data.MockSpectra(size=10, data_dir=data_dir)"
+    "output_file = op.join(data_dir, 'mock_spectra.h5')\n",
+    "mock_spec = data.MockSpectra(size=10, data_dir=data_dir)\n",
+    "mock_spec.save_spectra(output_file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "bdb9095f",
    "metadata": {},
    "outputs": [
@@ -196,13 +200,44 @@
        "(1036,)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mock_spec.wave.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6fed0a0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mock_spec = data.MockSpectra(size=10, data_dir=data_dir, output_file=output_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "27c5773e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1036,), <hetgen.data.MockSpectra at 0x7f9ca49a2970>)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mock_spec.wave.shape, mock_spec"
    ]
   },
   {
@@ -332,9 +367,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c69fd6cc",
+   "metadata": {},
+   "source": [
+    "## Train Val set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "363d44c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((16, 1036), (4, 1036))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from os import path as op\n",
+    "from hetgen.data import load_training_data\n",
+    "\n",
+    "data_dir= '/home/qezlou/HD2/HETDEX/encoder/data/'\n",
+    "output_file = op.join(data_dir, 'mock_spectra.h5')\n",
+    "train, val = load_training_data(output_file=output_file)\n",
+    "\n",
+    "train.shape, val.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363d44c6",
+   "id": "6da73ea3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -342,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.9",
+   "display_name": "hetgen",
    "language": "python",
    "name": "python3"
   },
@@ -356,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
