small notebook change

--- a/notebooks/mock_spectra.ipynb
+++ b/notebooks/mock_spectra.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "da562ee8",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
     "# Generate and save training data\n",
     "data_dir= '/home/qezlou/HD2/HETDEX/encoder/data/'\n",
     "output_file = op.join(data_dir, 'mock_spectra.h5')\n",
-    "mock_spec = data.MockSpectra(size=10, data_dir=data_dir)\n",
+    "mock_spec = data.MockSpectra(size=10_000, data_dir=data_dir)\n",
     "mock_spec.save_spectra(output_file)\n"
    ]
   },
@@ -383,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "((16, 1036), (4, 1036))"
+       "((16000, 1036), (4000, 1036))"
       ]
      },
      "execution_count": 2,
